# record-library

./: .gitignore  package-lock.json  schema.sql
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/record_library/: __init__.py  db.py  discogs.py  libraries.py  records.py  users.py
backend/src/record_library/api/: __init__.py  auth.py  deps.py  libraries.py  main.py  records.py  security.py
backend/tests/: test_permissions.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: Field.tsx  Layout.tsx  Logo.tsx  Modal.tsx  ModalCard.tsx  Sidebar.tsx  Vinyl.tsx  Wordmark.tsx
frontend/src/modals/: AddMemberModal.tsx  AddRecordModal.tsx  CreateLibraryModal.tsx  LibraryModal.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/state/: LibraryUI.tsx
